--- a/css/style.css
+++ b/css/style.css
@@ -375,10 +375,10 @@ template {
   color: #fff;
 }
 
-.sidenav #hamburger {
+.sidenav .hamburger {
   position: absolute;
-  top: 23px;
-  right: 18px;
+  top: 20px;
+  right: 15px;
   color: #fff;
 }
 
@@ -388,7 +388,7 @@ template {
   margin-right: 13px;
 }
 
-.sidenav hr {
+hr {
   display: block;
   height: 1px;
   border: 0;
@@ -398,7 +398,7 @@ template {
   background-color: #333;
 }
 
-.sidenav p {
+p {
   height: 10px;
   color: #808080;
   font-family: "Roboto", sans-serif;
@@ -408,7 +408,7 @@ template {
   padding-left: 20px;
 }
 
-.sidenav .menager {
+.menager {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -420,11 +420,11 @@ template {
   align-items: center;
 }
 
-.sidenav .menager img {
+.menager img {
   padding-left: 20px;
 }
 
-.sidenav .menager p {
+.menager p {
   color: #56819f;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -779,6 +779,7 @@ body {
 
 #inside_numbers img {
   padding-bottom: 55px;
+  width: 100%;
 }
 
 /*Links*/
@@ -797,6 +798,13 @@ button {
   margin: 23px;
   border: none;
   cursor: pointer;
+  transition: 1s;
+}
+
+button:hover {
+  color: #f58220;
+  background-color: #fff;
+  border: 1px solid #f58220;
 }
 
 .row {
