--- a/sass/components/_side_navigation.scss
+++ b/sass/components/_side_navigation.scss
@@ -24,23 +24,24 @@
          border-left: 4px solid $color_15;
          background-color: $color_9;
       }
-   }
+   }  
    #logo {
       position: absolute;
       top: 18px;
       left: 20px;
       color: $color_2;
    }
-   #hamburger {
+   .hamburger {
       position: absolute;
-      top: 23px;
-      right: 18px;
+      top: 20px;
+      right: 15px;
       color: $color_2;
    }
-   a img {
+      a img {
       height: 18px;
       width: 15px;
       margin-right: $margin-right;
+      }
    }
    hr {
       display: block;
@@ -73,7 +74,6 @@
          font-weight: 300;
       }
    }
-}
 
 .menager {
    position: relative;
@@ -85,5 +85,5 @@
       @include border-radius(50%);
       top: 0;
       left: 55px;
-   }
+   } 
 }
