--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -17,21 +17,30 @@ $color_11: #808080;
 $color_12: #04ae00;
 $color_13: #e3e3e3;
 $color_14: #191919;
-$color_15: #f58220;;
+$color_15: #f58220;
+$color_16: #b1bfbf;
 
 
 
 //Margins
 $margin: 0;
 $margin2: 18px 18px 22px 206px;
+$margin3: 0 auto;
 $margin-right: 13px;
+$margin-right_2: 33px;
+$margin-left_2: 33px;
 $margin-top: 44px;
+$margin-top_2: 70px;
+$margin-top_3: 185px;
 $margin-bottom: 40px;
+$margin-bottom_2: 55px;
 
 //Padings
 $padding_top: 60px;
+$padding_top_2: 48px;
 $padding: 8px 8px 8px 32px;
 $padding-left: 20px;
+$padding-left_2: 17px;
 $padding2: 0 20px;
    
 //Box sizing
