--- a/css/style.prefixed.css
+++ b/css/style.prefixed.css
@@ -535,10 +535,18 @@ button:hover {
   color: #fff;
 }
 
-.sidenav a img {
+.sidenav a svg {
   height: 18px;
   width: 15px;
   margin-right: 13px;
+}
+
+.sidenav a svg path {
+  fill: #818181;
+}
+
+.sidenav.show {
+  display: block;
 }
 
 hr {
@@ -570,8 +578,8 @@ p {
       align-items: center;
 }
 
-.menager img {
-  padding-left: 20px;
+.menager svg {
+  margin-left: 20px;
 }
 
 .menager p {
@@ -636,16 +644,8 @@ p {
   left: 28px;
 }
 
-#top_navigation #leo {
-  width: 172px;
-}
-
-#top_navigation #back {
-  width: 57px;
-}
-
-#top_navigation #leo img {
-  padding-left: 18px;
+#top_navigation #leo svg {
+  margin-left: 18px;
 }
 
 #top_navigation #leo p {
@@ -653,6 +653,10 @@ p {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 300;
+}
+
+#top_navigation #back {
+  width: 57px;
 }
 
 #top_navigation #cash p {
@@ -776,12 +780,11 @@ body {
   transform: translateY(50%);
 }
 
-#inside_top #data_picker #data_choose #one img,
-#inside_top #data_picker #data_choose #two img,
-#inside_bottom #data_picker #data_choose #one img,
-#inside_bottom #data_picker #data_choose #two img {
-  padding-left: 45px;
-  margin: 0;
+#inside_top #data_picker #data_choose #one svg,
+#inside_top #data_picker #data_choose #two svg,
+#inside_bottom #data_picker #data_choose #one svg,
+#inside_bottom #data_picker #data_choose #two svg {
+  margin-left: 45px;
   transform: translateY(50%);
 }
 
