--- a/sass/style.scss
+++ b/sass/style.scss
@@ -89,9 +89,8 @@ body {
             margin: $margin;
             transform: translateY(50%);
          }
-         img {
-            padding-left: 45px;
-            margin: $margin;
+         svg {
+            margin-left: 45px;
             transform: translateY(50%);
          }
       }
@@ -106,7 +105,6 @@ body {
          top: 10px;
          left: 30px;
       }
-
    }
 }
 
