--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,6 @@
 //Fonts
-$fonts: 'Roboto', sans-serif;
+$fonts: 'Roboto',
+sans-serif;
 
 //Colors
 $color_basic: #818181;
@@ -42,6 +43,6 @@ $padding: 8px 8px 8px 32px;
 $padding-left: 20px;
 $padding-left_2: 17px;
 $padding2: 0 20px;
-   
+
 //Box sizing
 $border_box: border-box;
