--- a/sass/components/_side_navigation.scss
+++ b/sass/components/_side_navigation.scss
@@ -50,9 +50,15 @@
       path {
          fill: $color_basic;
       }
+      .details {
+         fill:red;
+      }
+   }
+   &.hide {
+      display: none;
    }
    &.show {
-      display: none;
+      display: block;
    }
 }
 
