--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -62,17 +62,38 @@ button {
    -ms-flex-preferred-size: 35%;
    flex-basis: 35%;
    text-align: left;
+   @media all and (max-width: 991px) {
+      flex-basis: 50%;
+   }
+   @media(max-width: 767px) {
+      flex-basis: 100%;
+      text-align: center;
+   }
 }
 
 .row-inner-1-2 {
    -ms-flex-preferred-size: 30%;
    flex-basis: 30%;
    text-align: left;
+   @media all and (max-width: 991px) {
+      flex-basis: 50%;
+   }
+   @media(max-width: 767px) {
+      flex-basis: 100%;
+      text-align: center;
+   }
 }
 
 .row-inner-1-4 {
    &.icons {
       text-align: right;
+      @media all and (max-width: 991px) {
+         flex-basis: 100%;
+         text-align: center;
+      }
+      @media(max-width: 767px) {
+         flex-basis: 100%;
+      }
    }
    &.padding {
       padding-left: 10px;
