--- a/sass/components/_general_statistic.scss
+++ b/sass/components/_general_statistic.scss
@@ -18,12 +18,9 @@
          margin-left: $margin-left_2;
       }
       p {
-         display: -webkit-box;
-         display: -ms-flexbox;
-         display: flex;
-         -webkit-box-pack: justify;
-         -ms-flex-pack: justify;
-         justify-content: space-between;
+         @include flexbox;
+         @include flex-pack(justify);
+         @include justify-content(space-between);
          color: $color_6;
          font-family: Roboto;
          font-weight: 700;
